--- a/buildroot-2020.02/.defconfig
+++ b/buildroot-2020.02/.defconfig
@@ -4,7 +4,7 @@
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_alpha is not set
-# BR2_arm is not set
+BR2_arm=y
 # BR2_armeb is not set
 # BR2_cris is not set
 # BR2_ia64 is not set
